ingress/ingress-1/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
        app: nginx-app

  template:
    metadata:
      name: nginx
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports: 
            - containerPort: 80


---

apiVersion: v1 
kind: Service
metadata: 
  name: nginx-service
spec:
  type: ClusterIP
  ports: 
    - port: 80
      targetPort: 80
  selector: 
    app: nginx-app
