ingress/ingress-1/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
  labels: 
    name: react-app
    app: react-app

spec: 
  template: 
    metadata:
      name: react-pod
      labels: 
        name: react-app
        app: react-app
    spec:
      containers:
        - name: react-app
          image: gnvsai2020/githubreact:latest
          ports:
            - containerPort: 3000

  replicas: 1
  
  selector: 
    matchLabels:
      name: react-app
      app: react-app

---

apiVersion: v1 
kind: Service
metadata: 
  name: react-service
  labels: 
    name: react-service
    app: react-app

spec: 
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector: 
    name: react-app
    app: react-app
